--- a/LandingInfo/css/style.scss
+++ b/LandingInfo/css/style.scss
@@ -1,11 +1,11 @@
 /* Colors
 -----------------------------------------*/
+$heading: #7b027b;
+$subheading: #510251;
+$paragraph: #000;
+
 $clickable: #c04848;
 $hover: #f07241;
-$headers: #601848;
-
-$overlay: #300030;
-$extra: #480048;
 
 
 
@@ -22,30 +22,95 @@ $extra: #480048;
 
 /* Body Styles
 -----------------------------------------*/
-h2 { color: $headers; }
+body {
+	background: url(../assets/dust.png);
+}
 
-h3 { color: $extra; }
+h2 { color: $heading; }
+h3 { color: $subheading; }
 
-a { color: $clickable; }
+a { 
+	color: $clickable; 
+	@include colorTransition;
+}
+
+p { color: $paragraph; }
+
+.compress { padding: 0 5%; }
+
+.button { 
+	background: $clickable;
+	border-radius: 10px;
+
+	&:hover { background: $hover; }
+}
+
+.separator {
+	width: 10%;
+	height: 10px;
+	border-bottom: 5px solid $hover;
+	margin: 20px auto;
+}
 
 
 /* Header / Nav
 -----------------------------------------*/
 .header {
-	background: linear-gradient(rgba(48, 0, 48, 0.35), rgba(48, 0, 48, 0.35)), url(../assets/citypeople.jpg);
+	background: linear-gradient(rgba(255, 255, 255, 0.80), rgba(255, 255, 255, 0.80)), url(../assets/citypeople.jpg);
 	background-position: -1208px -216px;
 	height: 500px;
 	max-height: 500px;
 
-	.nav {
-		ul li {
-			a {
+	.navbar {
+		padding-top: 10px;
+		border-bottom: 1px solid $subheading;
+		height: 50px;
 
-			}
+		a { 
+			font-weight: 600;
+			padding: 7px 5%;
+			transition: background 0.5s ease;
 
-			&:hover {
-				background: #000;
+			&:hover { 
+				color: $hover;
+				background: #fff; 
 			}
 		}
+
+		.large-2 {
+			h5 {
+				color: $subheading;
+				border-bottom: 5px solid $subheading;
+			}
+		}
+
+		.left-nav {
+			a:first-child { margin-left: 62%; }
+		}
+	} //nav
+
+	.info {
+		margin-top: 50px;
+
+		p { 
+			margin: 50px 25%;
+			width: 50%; 
+		}
+
+		.button {
+			width: 50%;
+			margin: 0 25%;
+		}
 	}
+} //header
+
+
+/* Content
+-----------------------------------------*/
+.content {
+	margin: 50px 0;
+
+	p { width: 70%; margin: 0 15%; }
 }
+
+
