--- a/LandingInfo/css/style.css
+++ b/LandingInfo/css/style.css
@@ -72,9 +72,37 @@ p {
 /* Content
 -----------------------------------------*/
 .content {
-  margin: 50px 0; }
-  .content p {
+  margin: 50px 0;
+  height: 660px; }
+  .content .moreInfo {
     width: 70%;
     margin: 0 15%; }
+  .content .imgColumns {
+    margin-top: 100px; }
+    .content .imgColumns .threeBox {
+      text-align: left;
+      background: #fff;
+      -webkit-box-shadow: 0px 4px 18px -2px rgba(0, 0, 0, 0.5);
+      -moz-box-shadow: 0px 4px 18px -2px rgba(0, 0, 0, 0.5);
+      box-shadow: 0px 4px 18px -2px rgba(0, 0, 0, 0.5); }
+      .content .imgColumns .threeBox .infoBox {
+        padding: 10px 8px;
+        height: 200px; }
+
+/* Content
+-----------------------------------------*/
+footer {
+  background: linear-gradient(rgba(81, 2, 81, 0.57), rgba(81, 2, 81, 0.57)), url(../assets/cityscape.jpg);
+  background-size: 100%;
+  background-position: -2px -164px;
+  padding: 125px 0 70px 0; }
+  footer h3 {
+    color: #fff; }
+  footer a {
+    margin: 0 20px;
+    padding: 5px;
+    color: #f07241; }
+    footer a:hover {
+      background: #fff; }
 
 /*# sourceMappingURL=style.css.map */
