--- a/LandingInfo/css/style.scss
+++ b/LandingInfo/css/style.scss
@@ -109,8 +109,46 @@ p { color: $paragraph; }
 -----------------------------------------*/
 .content {
 	margin: 50px 0;
+	height: 660px;
 
-	p { width: 70%; margin: 0 15%; }
+	.moreInfo { width: 70%; margin: 0 15%; }
+
+	.imgColumns {
+		margin-top: 100px;
+
+		.threeBox { 
+			text-align: left;
+			background: #fff;
+
+			-webkit-box-shadow: 0px 4px 18px -2px rgba(0,0,0,0.5);
+			-moz-box-shadow: 0px 4px 18px -2px rgba(0,0,0,0.5);
+			box-shadow: 0px 4px 18px -2px rgba(0,0,0,0.5);
+
+			.infoBox {
+				padding: 10px 8px;
+				height: 200px;
+			}
+		}
+	}
 }
 
 
+/* Content
+-----------------------------------------*/
+footer {
+	background: linear-gradient(rgba(81, 2, 81, 0.57), rgba(81, 2, 81, 0.57)), url(../assets/cityscape.jpg);
+	background-size: 100%;
+    background-position: -2px -164px;
+
+    padding: 125px 0 70px 0;
+
+    h3 { color: #fff; }
+
+    a { 
+    	margin: 0 20px; 
+    	padding: 5px;
+    	color: $hover; 
+
+    	&:hover { background: #fff; }
+    }
+}
