--- a/LandingInfo/css/style.scss
+++ b/LandingInfo/css/style.scss
@@ -32,6 +32,8 @@ h3 { color: $subheading; }
 a { 
 	color: $clickable; 
 	@include colorTransition;
+
+	&:active { color: #fc7c4a; }
 }
 
 p { color: $paragraph; }
@@ -41,6 +43,7 @@ p { color: $paragraph; }
 .button { 
 	background: $clickable;
 	border-radius: 10px;
+	color: #fff;
 
 	&:hover { background: $hover; }
 }
@@ -133,7 +136,7 @@ p { color: $paragraph; }
 }
 
 
-/* Content
+/* Footer
 -----------------------------------------*/
 footer {
 	background: linear-gradient(rgba(81, 2, 81, 0.57), rgba(81, 2, 81, 0.57)), url(../assets/cityscape.jpg);
@@ -152,3 +155,4 @@ footer {
     	&:hover { background: #fff; }
     }
 }
+
