--- a/SomethingBlackPink/css/style.css
+++ b/SomethingBlackPink/css/style.css
@@ -4,15 +4,18 @@
 -----------------------------------------*/
 /* Body Styles
 -----------------------------------------*/
+.row {
+  max-width: 80rem; }
+
 /* Header
 -----------------------------------------*/
 .header {
-  height: 400px;
+  height: 425px;
   background: url(../assets/snow.jpg);
   background-size: 100%;
   background-position-y: -650px; }
   .header img {
-    margin: 0 33.5%; }
+    margin-top: 25px; }
   .header .searchbox {
     position: relative;
     min-width: 50px;
@@ -30,7 +33,7 @@
     right: 0;
     border: 0;
     outline: 0;
-    background: #dcddd8;
+    background: #f0f0f0;
     width: 100%;
     height: 50px;
     margin: 0;
@@ -62,9 +65,25 @@
     line-height: 50px;
     text-align: center;
     cursor: pointer;
-    color: #dcddd8;
-    background: #172b3c; }
+    color: #e64e4d;
+    background: #1a1a1a; }
+    .header .searchbox-icon:hover,
+    .header .searchbox-submit:hover {
+      color: #1a1a1a;
+      background: #e64e4d; }
   .header .searchbox-open {
     width: 100%; }
+
+/* Nav
+-----------------------------------------*/
+.navbar {
+  text-align: center;
+  padding: 20px 0; }
+  .navbar a {
+    padding: 10px 5%;
+    color: #e64e4d; }
+    .navbar a:hover {
+      background: #e64e4d;
+      color: #000; }
 
 /*# sourceMappingURL=style.css.map */
