--- a/SomethingBlackPink/css/style.scss
+++ b/SomethingBlackPink/css/style.scss
@@ -15,19 +15,19 @@ $snow: #f0f0f0;
 
 /* Body Styles
 -----------------------------------------*/
-
+.row { max-width: 80rem; }
 
 
 /* Header
 -----------------------------------------*/
 .header {
-	height: 400px;
+	height: 425px;
 	background: url(../assets/snow.jpg);
 	background-size: 100%;
 	background-position-y: -650px;
 
 	img {
-		margin: 0 33.5%;
+		margin-top: 25px;
 	}
 
 	// SearchBox
@@ -51,7 +51,7 @@ $snow: #f0f0f0;
 	    right: 0;
 	    border: 0;
 	    outline: 0;
-	    background: #dcddd8;
+	    background: $snow;
 	    width: 100%;
 	    height: 50px;
 	    margin: 0;
@@ -82,14 +82,37 @@ $snow: #f0f0f0;
 	    line-height: 50px;
 	    text-align: center;
 	    cursor: pointer;
-	    color: #dcddd8;
-	    background: #172b3c;
+	    color: $pink;
+	    background: $charcoal;
+
+	    &:hover {
+	    	color: $charcoal;
+	    	background: $pink;
+	    }
 	}
 
 	.searchbox-open{
 	    width: 100%;
 	}
 
+} //header
+
+
+/* Nav
+-----------------------------------------*/
+.navbar {
+	text-align: center; 
+	padding: 20px 0;
+
+	a {
+		padding: 10px 5%;
+		color: $pink;
+
+		&:hover {
+			background: $pink;
+			color: $black;
+		}
+	}
 }
 
 
